# IPK

./: README.md
Project1/: CHANGELOG.md  CMakeLists.txt  Makefile  README.md
Project1/src/: ipk.c  ipk.h
Project1/tests/: CMakeLists.txt  UDP_in.txt  basic_tcp.exp  basic_udp.in  basic_udp.out  tcp_long.in  tcp_long.out
Project2/: CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
Project2/src/: parser.c  parser.h  server.c  server.h  tcp.c  udp.c
